# Cubed-Sphere-DG-Solver

./: README.md  pyproject.toml  verification_report.py
.github/workflows/: tests.yml
benchmarks/: benchmark_scan.py  run_benchmark.py  verify_refactor.py
cubed_sphere/: __init__.py  backend.py
cubed_sphere/geometry/: __init__.py  grid.py
cubed_sphere/numerics/: __init__.py  spectral.py
cubed_sphere/physics/: __init__.py  initialization.py
cubed_sphere/solvers/: __init__.py  advection.py  base.py  swe.py  swe_jax.py  swe_numpy.py
cubed_sphere/utils/: __init__.py  ic_builder.py  io.py  regrid.py  vis.py
docs/: ACCURACY_REPORT.md  BENCHMARK_REPORT.md  Theoretical_Background.md  VALIDATION_REPORT.md
examples/: Cubed_Sphere_Benchmarks.ipynb  Cubed_Sphere_Benchmarks1.ipynb  README.md  advection_benchmark.ipynb  demo_custom_input.py  demo_jax_acceleration.py  demo_offline_io.py  demo_plotting.py  demo_regridding.py  demo_vector_regridding.py  inspect_topology.py  run_advection.py  run_jax.py  run_swe_convergence.py  verify_geostrophic.py  verify_system_arch.py  verify_wind_field.py
tests/: README.md  test_advection.py  test_conservation.py  test_consistency.py  test_geometry.py  test_initialization.py  test_input_validation.py  test_jax_backend.py  test_numerics.py  test_regridding.py  test_swe_integration.py  test_swe_integration_jax.py  validate_all.py  validate_refactor.py
tutorials/: 01_Introduction_Advection.ipynb  02_Shallow_Water_Equations.ipynb  03_Data_Pipeline_and_IO.ipynb
validation/: README.md
validation/advection/: case1_solid_body.py  (+1 more)
(+4 files in other folders)
