[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cubed_sphere"
version = "0.1.0"
description = "A discontinuous Galerkin method package for solving PDEs on the cubed sphere."
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "xarray",
    "netcdf4"
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]
dev = [
    "pytest",
    "flake8",
    "black",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cubed_sphere*"]  # 明確指定只包含主套件
exclude = ["tutorials*", "tests*", "examples*", "docs*"] # 明確排除其他資料夾
namespaces = false